<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ExamModeActivity" >

    <TextView
        android:id="@+id/singleChoiceExamTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title" 
        android:textStyle="bold|italic"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"  />
    
   
        <EditText
            android:id="@+id/jumpToTextExam"
            android:layout_width="30dp"
            android:layout_height="20dp"
      	    android:layout_alignParentRight="true"
      	    android:gravity="right"
      	    android:inputType="number"
          />
        <Button
            android:id="@+id/jumpToButtonExam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
      	    android:layout_alignParentRight="true" 
      	    android:gravity="right"
            android:text="Go To" />
   		
    <RadioGroup
        android:id="@+id/singleChoiceExam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
 
        <TextView
        android:id="@+id/questionExam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
        <RadioButton
            android:id="@+id/choiceAExam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choiceA" 
            android:onClick="onRadioButtonClicked" />
 
        <RadioButton
            android:id="@+id/choiceBExam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choiceB" 
            android:onClick="onRadioButtonClicked" />
        <RadioButton
            android:id="@+id/choiceCExam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choiceC"  
            android:onClick="onRadioButtonClicked" />
        <RadioButton
            android:id="@+id/choiceDExam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choiceD" 
            android:onClick="onRadioButtonClicked" />
 
    </RadioGroup>
    
    
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:orientation="horizontal" >
        <CheckBox
                android:id="@+id/markForReviewExam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:text="Mark for Review" />
        <Button
            android:id="@+id/previousExam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:text="@string/previous" />
        <Button
            android:id="@+id/nextExam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:text="@string/next" />
        
    </LinearLayout>
     

        
</LinearLayout>