<menu xmlns:android="http://schemas.android.com/apk/res/android" 
      xmlns:myapp="http://schemas.android.com/apk/res-auto" >
    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          android:showAsAction="ifRoom|collapseActionView" 
          myapp:actionViewClass="android.support.v7.widget.SearchView"/>
    <item android:id="@+id/action_share"
          android:icon="@drawable/ic_action_share"
          android:title="@string/action_share"
          android:showAsAction="ifRoom|collapseActionView" 
          myapp:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:showAsAction="never" />
    <item android:id="@+id/action_back_to_main_menu"
          android:title="Back to Main Menu"
          android:showAsAction="never" />
</menu>
