<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ViewAnswerModeActivity">
    
<LinearLayout  android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/practiceModeExamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title" 
        android:textStyle="bold|italic"
        android:gravity="center_horizontal"
        android:layout_marginBottom="25dp"       
        android:textAppearance="?android:attr/textAppearanceLarge"  />
      
	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:id="@+id/singleChoicePracticeNumber"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:text="1/100" />
        
       <EditText
            android:id="@+id/jumpToTextPractice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@null"
            android:padding="10dp"
            android:background="@drawable/edit_text_box"
            android:layout_marginLeft="20dp"
      	    android:gravity="left"
      	    android:hint="Page"
      	    android:inputType="number"/>
        <Button
            android:id="@+id/jumpToButtonPractice"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginLeft="0dp"
      	    android:gravity="left"
            android:text="Go" />
        <Button
            android:id="@+id/previousButtonPractice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_gravity="right"
            android:text="@string/previous" />
        <Button
            android:id="@+id/nextButtonPractice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:layout_gravity="right"
            android:text="@string/next" />
    </LinearLayout>
    
  
   <WebView
        android:id="@+id/questionPractice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" 
        android:background="@android:color/transparent"
        android:paddingBottom="0dp"
   		android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp"/>
        
    <RadioGroup
        android:id="@+id/singleChoicePractice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
       
        <RadioButton
            android:id="@+id/choiceAPractice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choiceA" 
            android:onClick="onRadioButtonClicked" />
 
        <RadioButton
            android:id="@+id/choiceBPractice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choiceB" 
            android:onClick="onRadioButtonClicked" />
        <RadioButton
            android:id="@+id/choiceCPractice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choiceC" 
            android:onClick="onRadioButtonClicked"  />
        <RadioButton
            android:id="@+id/choiceDPractice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choiceD" 
            android:onClick="onRadioButtonClicked" />
 
    </RadioGroup>
    
     <TextView
        android:id="@+id/checkAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />
    
        
  </LinearLayout>
</ScrollView>